Abonos/crear OK

--- a/API-Inicio/src/main/resources/templates/prestamos.html
+++ b/API-Inicio/src/main/resources/templates/prestamos.html
@@ -13,6 +13,7 @@
         <th>Monto</th>
         <th>Fecha</th>
         <th>Cliente</th>
+        <th>Acciones</th>
     </tr>
     </thead>
     <tbody>
