reporte/prestamo OK

--- a/API-Inicio/src/main/resources/templates/prestamos.html
+++ b/API-Inicio/src/main/resources/templates/prestamos.html
@@ -39,6 +39,12 @@
     </tbody>
 </table>
 
+<!-- Botón para descargar reporte de prestamos -->
+<a href="/inicio/prestamos/reporte" target="_blank">
+    <button>Descargar PDF</button>
+</a>
+
+
 <!-- Botón para ir al inicio -->
 <form th:action="@{/inicio/home}" method="get">
     <button type="submit">Ir al inicio</button>
